--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,35 +12,6 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
-    </head>
-    <body>
-    <link href="https://bootswatch.com/5/darkly/bootstrap.css" type="text/css" rel="stylesheet" />
-		<div class="container">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			  <div class="container-fluid">
-				<a class="navbar-brand" href="#">Navbar</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
 
-				<div class="collapse navbar-collapse" id="navbarColor01">
-				  <ul class="navbar-nav me-auto">
-					<li class="nav-item">
-					  <a class="nav-link active" href="/home">Home
-						<span class="visually-hidden">(current)</span>
-					  </a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/actu">Actualites</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/contact">Contact</a>
-					</li>
-				  </ul>
-				</div>
-			  </div>
-			</nav>
-        {% block body %}{% endblock %}
-		</div>
-    </body>
-</html>
+        <link href="https://bootswatch.com/5/flatly/bootstrap.css" type="text/css" rel="stylesheet" />
+    </head>
