--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,5 +13,5 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
 
-        <link href="https://bootswatch.com/5/flatly/bootstrap.css" type="text/css" rel="stylesheet" />
+        <link href="https://bootswatch.com/5/darkly/bootstrap.css" type="text/css" rel="stylesheet" />
     </head>
