--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,3 +18,44 @@
     </ul>
 </div>
 {% endblock %}
+<body>
+    <nav>
+        <h1>Les samourais</h1>
+        <div class="onglets">
+            <a href="#HOME">Home</a>
+            <a href="html/page1.html">lien vidéos</a>
+        </div>
+    </nav>
+
+    <header>
+        <h1>Les samourais,</h1>
+        <h3>Une histoire d'honneur et de princpes.</h3>
+    </header>
+
+    <section class="main" id="HOME">
+
+        <div class="content">
+            <div class="card">
+                <div class="left">
+                    <h1>Histoire</h1>
+                    <p>Fortement ancré dans l’histoire de l’archipel, le samouraï ne craint ni la mort ni la souffrance pour servir son seigneur. Au fil des siècles, il a su évoluer pour devenir un symbole emblématique du Japon. Le samouraï (侍) était un guerrier japonais au service d'un grand seigneur, le daimyo. Facilement reconnaissable avec son armure et son katana, le samouraï respecte un code d'honneur strict, le Bushido ou "la voie du guerrier". Saviez-vous que ce guerrier suit, depuis sa plus tendre enfance, une formation à l’art du combat qui le rend redoutable ? Pour autant, le samouraï n'est pas qu'une simple brute épaisse, il possède un côté raffiné et participe au développement de l'art Japonais. Littéralement, le mot samouraï signifie « celui qui sert ». C’est donc un guerrier japonais au service d’un seigneur local, le daimyō, pendant la période féodale. A l’ère Heian, il s’agissait la plupart du temps, de paysans et d’artisans qui, en cas de guerre, combattaient sous les ordres des seigneurs auxquels ils étaient rattachés, en échange de riz.. Pas très alléchant comme contrepartie ! Par ailleurs, on mesurait leur richesse à la quantité de riz (koku) qu’ils possédaient. Au fur et à mesure, le samouraï rejoint la cour impériale pour recevoir un entraînement intensif de guerrier et devenir un combattant hors pair. Saviez-vous qu’il existe plusieurs appellations pour distinguer les différents samouraïs ? Le rōnin, très mal considéré étaient un guerrier sans maître qui n’appartenait à aucun clan. Le hatamoto quant à lui, était un vassal du shogun, général de guerre à la tête du pays.Si les samouraïs étaient plutôt des petits paysans ou artisans à l’ère Heian, ils vont devenir l’élite guerrière avec l’apparition du shogunat. Au 12esiècle, les samouraïs montent en puissance avec les clans Minamoto et leurs opposants les Taira qui prennent progressivement le pouvoir politique jusqu’alors détenu par l’empereur et la cour à Kyoto. La victoire de Minamoto lors de la guerre de Genpei, marque le début du shogunat de Kamakura ou bakufu, une dictature militaire ou les samouraïs contrôlent le pays. Ils bénéficient alors, d’un statut héréditaire et de privilèges sociaux accordés uniquement à l’aristocratie. Suivi du shogunat de Muromachi et de Tokugawa, ce régime dura près de 700 ans, jusqu’à la restauration de Meiji en 1868. Durant cette époque, le port du sabre (katana) et de l’armure représente une forme de prestige très reconnue dans la culture du samouraï. Cette distinction donna naissance à un nouvel artisanat au Pays du Soleil Levant. Pendant l’ère de Sengoku vers le 16e siècle, les samouraïs obéissent à une seule et unique loi, celle du plus fort, entraînant la terreur des habitants.</p>
+                </div>
+                <div class="right">
+                    <img src="https://i.pinimg.com/736x/7d/4a/09/7d4a0977e466613f03b421ad4baa01cc.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="left">
+                    <h1>Equipements</h1>
+                    <p>Casque, masque, cuirasse, épaulières, manches, jupe, sous-jupe et jambières composent l'armure du samouraï. Des vêtements dont le jinbaori (manteau) complète l'ensemble.
+Combien pèse le tout ? Entre 10 et 20 kg. Comparée aux versions européennes ou perses, cette armure est très légère.A l'origine, l'armure est confectionnée à partir de multiples petites lamelles perforées, souvent laquées et reliées ensemble par un laçage coloré et des cordons de soie. De nombreux matériaux composent l'armure japonaise que l'on veut aussi belle que fonctionnelle. Fer, cuir, brocart, soie, métaux précieux ou semi-précieux sont d'usage courant. Divers artisants sont à l'oeuvre pendant plusieurs mois. Les forgerons traivaillent les pièces en métal et les maroquiniers confectionnent des pièces de protection en cuir. Les tisserands et passementiers s'occupent des vêtements et des broderies. Les dinandiers ornent d'or ou de cuivre les éléments de l'armure.Rares sont les armures avec toutes leurs composantes d'origine. Souvent, on intègre d'anciennes parties d'armures aux nouvelles et on remplace les laçages abîmés par l'humidité. Des pièces se transemettent aussi de génération en génération.Ils sont équiper de plusieurs armes tel que le  Katana, c’est l’arme la plus puissante et plus étroitement liée au Samourai. On l’a considéré parfois comme l’âme du Samourai. Un samourai ne s’eloignait pas beaucoup de leur épée, même si on profitait de la paix. Le meilleur cadeau qu’un samourai pouvait recevoir une épée forgée par un célèbre maître forgeron,La Nodachi sgnifie l’épée du champ, il s’agit d’un grand sabre, on a besoin des deux mains pour l’employer. On disait qu’il était plus long que l’épée Tachi. Elle était utilisée par l’infanterie au champ ouvert, au contraire que les autres japonaises, on les portait dans la ceinture ou penché dans le dos,Le  Tachi est  une sorte d’épée plus longue et courbée que la Katana,Le Tanto c’est la dague défensive japonaise, elle est double tranchante et sa lame a une longeur d’entre quinze et trence centimètres. On l’utilisait pour le rituel harakiri ou seppuku </p>
+                </div>
+                <div class="right">
+                    <img src="https://i.pinimg.com/originals/d0/a9/b2/d0a9b20401ef1a76b03ad24300be2d1a.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+</Html>    
